Back End Completo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="TxtConta">Conta</string>
 
     <!--Conta func-->
-    <string name="Txtupdatedados">Atualizar Dadoa</string>
+    <string name="Txtupdatedados">Atualizar Dados</string>
     <string name="TxtInfoConta">Informaçoes da conta</string>
     <string name="TxtSuporte">Suporte</string>
     <string name="TxtInfoLegais">Informações Legais</string>
