Correção no filtro e melhorias

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="descImgRelogio">Img De relogio</string>
 
     <string-array name="ItensDropdown">
+        <item> </item>
         <item>Em Andamento</item>
         <item>Terminado</item>
         <item>Não iniciado</item>
